--- a/goproject/conf/app.conf
+++ b/goproject/conf/app.conf
@@ -2,3 +2,20 @@ appname = myblog
 httpport = 8080
 runmode = dev
 sessionon = true
+#mysql配置
+driverName = mysql
+mysqluser = root
+mysqlpwd = 123456
+host = 127.0.0.1
+port = 3306
+dbname = myblog
+
+#Session
+sessionon = true
+sessionprovider = "file"
+sessionname = "blog"
+sessiongcmaxlifetime = 1800
+sessionproviderconfig = "./tmp"
+sessioncookielifetime = 1800
+
+articleListPageNum = 10
